--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "^0.37.4",
-    "@auth/prisma-adapter": "^2.7.4",
-    "@auth/supabase-adapter": "^1.7.4",
+    "@auth/core": "0.34.2",
+    "@auth/prisma-adapter": "^2.0.0",
+    "@auth/supabase-adapter": "^1.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-avatar": "^1.1.2",
